<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/home">
    <fragment
        android:id="@+id/home"
        android:name="com.example.myweather.ui.HomeFragment"
        android:label="@string/title_activity_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_dayDetails"
            app:destination="@+id/dayDetails" />
    </fragment>
    <fragment
        android:id="@+id/dayDetails"
        android:name="com.example.myweather.ui.DayDetailsFragment"
        android:label="@string/title_activity_detail"
        tools:layout="@layout/fragment_day_details">
        <argument
            android:name="dayWeather"
            app:argType="com.example.myweather.repository.DayWeather" />
    </fragment>
    <fragment
        android:id="@+id/settings"
        android:name="com.example.myweather.ui.SettingsFragment"
        android:label="@string/title_activity_settings" />
</navigation>