<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.myweather.ui.DayDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_xlarge"
        tools:context=".ui.DayDetailsFragment">

        <TextView
            android:id="@+id/day"
            style="@style/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:date="@{viewModel.date}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Tuesday" />

        <TextView
            android:id="@+id/temperature"
            style="@style/pageSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:isMetric="@{viewModel.isMetric}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day"
            app:temperature="@{viewModel.temperature}"
            tools:text="18" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_normal"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temperature"
            app:weatherId="@{viewModel.weatherId}"
            tools:src="@drawable/art_clouds" />

        <TextView
            android:id="@+id/description"
            style="@style/detailsLabel"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/description_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_icon" />

        <TextView
            android:id="@+id/description_value"
            style="@style/detailsValue"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintStart_toStartOf="@id/description"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:weatherId="@{viewModel.weatherId}"
            tools:text="Cloudy" />

        <TextView
            android:id="@+id/wind"
            style="@style/detailsLabel"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/wind_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_value" />

        <TextView
            android:id="@+id/wind_value"
            style="@style/detailsValue"
            android:layout_marginTop="@dimen/margin_normal"
            app:degrees="@{viewModel.degrees}"
            app:isMetric="@{viewModel.isMetric}"
            app:layout_constraintStart_toStartOf="@id/wind"
            app:layout_constraintTop_toBottomOf="@id/wind"
            app:windSpeed="@{viewModel.windSpeed}"
            tools:text="18 km/h" />

        <TextView
            android:id="@+id/humidity"
            style="@style/detailsLabel"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/humidity_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wind_value" />

        <TextView
            android:id="@+id/humidity_value"
            style="@style/detailsValue"
            android:layout_marginTop="@dimen/margin_normal"
            app:humidity="@{viewModel.humidity}"
            app:layout_constraintStart_toStartOf="@id/humidity"
            app:layout_constraintTop_toBottomOf="@id/humidity"
            tools:text="42%" />

        <TextView
            android:id="@+id/highLowTemp"
            style="@style/detailsLabel"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/high_low_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_icon" />

        <TextView
            android:id="@+id/highLowTemp_value"
            style="@style/detailsValue"
            android:layout_marginTop="@dimen/margin_normal"
            app:high="@{viewModel.maxTemp}"
            app:isMetric="@{viewModel.isMetric}"
            app:layout_constraintEnd_toEndOf="@id/highLowTemp"
            app:layout_constraintTop_toBottomOf="@id/highLowTemp"
            app:low="@{viewModel.minTemp}"
            tools:text="32 / 12" />

        <TextView
            android:id="@+id/pressure"
            style="@style/detailsLabel"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/pressure_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/highLowTemp_value" />

        <TextView
            android:id="@+id/pressure_value"
            style="@style/detailsValue"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="@id/pressure"
            app:layout_constraintTop_toBottomOf="@id/pressure"
            app:pressure="@{viewModel.pressure}"
            tools:text="102 hPa" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
